installer/ingress_local_only_middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: lan-whitelist
  namespace: bloggert
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.1.0/24
